# test-work

./: .clangd  .devcontainer.json  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  init.sql  readme.md  tmp.sql
src/: client.cpp  server.cpp
src/client/: client.cpp  client.hpp
src/components/session/: component.cpp  component.hpp
src/components/stock_exchange/: component.cpp  component.hpp
src/configs/: config.hpp
src/dto/: request.hpp  requisition.hpp  user_balance.hpp
src/exceptions/: client_exceptions.hpp
src/models/: deal.hpp  requisition.hpp  user.hpp
src/server/: server.cpp  server.hpp
src/sql/: query.hpp
src/tests/: test_main.cpp
src/utils/: json.cpp  json.hpp  logging.cpp  logging.hpp
